# example-swift-rust-metal

./: .gitignore  README.md
SwiftRustUeffiExample/SwiftRustUeffiExample/: ContentView.swift  QuadModel.swift  SwiftRustUeffiExample-Bridging-Header.h  SwiftRustUeffiExampleApp.swift  TriangleView.swift  create_metal_buffer.c  create_metal_buffer.h
SwiftRustUeffiExample/SwiftRustUeffiExample.xcodeproj/: project.pbxproj
SwiftRustUeffiExample/SwiftRustUeffiExample/Assets.xcassets/RustLogo.imageset/: Contents.json
SwiftRustUeffiExample/SwiftRustUeffiExample/Shaders/: ifs_rendering_shader.metal
example/: Cargo.toml
example/ExamplePackage/: Package.swift
example/ExamplePackage/Sources/ExamplePackage/: example.swift
example/src/: lib.rs  lib.udl  lsfr64.rs  util.rs
