[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]
name = "example"

[dependencies]
uniffi = "0.28"
vecmath = "1.0.0"


[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }